--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,189 @@
-.App {
-  text-align: center;
+*{
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+body{
   color: white;
+  background-color:rgb(10, 10, 10);  
 }
 
-.App-link {
-  color: #61dafb;
+
+.backImg {
+  background-repeat: no-repeat;
+  width: 100%;
+  height: 70vh;
+  padding: 15px 40px;
+  color: black; 
+  margin-bottom: 300px;  
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.grey-container {
+  
+  
+ 
+ border-radius: 50% / 10%;
+ color: white;
+ text-align: center;
+ text-indent: .1em;
+  background-color: rgb(63, 65, 60);
+  z-index: 5px;
+  margin: 2% 5% 3% 5%;
+  height: 350px;
+  width: 80vw;
+  padding: 30px 40px;
+  color: white;
+  display: block;
 }
+
+
+h1{
+  font-size: 40px;
+}
+
+h2{
+  margin-bottom: 10px;
+}
+
+.input-wrapper {
+  margin-top: 20px;
+}
+
+label{
+  margin: 0 5px;
+  font-size: 18px;
+}
+
+.input-wrapper > input {
+  width: 40%;
+  padding: 5px 17px ;
+  border-radius: 5px;
+  border: 1px solid black;
+  background: #f5f5f5;
+  color: black;
+  font-size: 18px;
+  outline-width: 0ch;
+}
+
+.Spinner-gif> img {
+  height: 60px;
+  width: 80px;
+ 
+  margin: 10px 0 0 20px;
+}
+
+.no-results {
+  margin-top: 10px;
+  color: rgb(243, 12, 12);
+  font-size: 18px;
+  display: inline-block; 
+}
+
+img{
+  width: 210px;
+  height: 295px;
+  object-fit: cover;
+  margin-top: 8px;
+  border-radius:8px;
+}
+
+
+.homepage__list {
+  justify-content: space-evenly;
+  margin: 0 5px 10px 5px;
+  display: flex;
+  flex-wrap: wrap;  
+}
+
+
+
+.card-wrapper {
+ 
+    width: 100%;
+    height: auto;
+    background: white;
+     margin: 1rem 9px 1rem 2px;
+    display: block;
+    display: inline-flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 10px;  
+    cursor: pointer;  
+      
+  }
+
+  .card-wrapper:hover{
+    transform: scale(1.03);
+  }
+
+  .bottom-container, h6 {
+    margin: 5px ;
+    text-align: center;
+    font-size: 16px;
+    font-weight: bold;
+  }
+
+ 
+  
+
+  @media screen and (max-width: 540px){
+    .backImg {
+      height: 52vh;    
+    }
+
+    .grey-container {
+      margin: 0 -10px;
+      height: 300px;
+      width: 90vw;      
+    }
+
+    .input-wrapper > input {
+      width: 90%; 
+    }
+
+    .homepage__list {
+      margin: 65px -20px ;
+      width: 93vw;
+    }
+
+    .card-wrapper {
+      margin: 5px 6px 5px 5px;
+    }
+
+  }
+
+
+  @media screen and (max-width: 483px){
+    .backImg {
+      height: 40vh;    
+    }
+    h1 {
+      font-size: 22px;
+    }
+
+    h2 {
+      font-size: 18px;
+    }
+
+    .input-wrapper > input {
+      width: 90%;
+      font-size: 18px;
+    }
+
+    .grey-container {
+      margin: 2% 2%;
+      height: 300px;
+      width: 100%;
+      padding: 20px 25px;
+    }
+
+    .homepage__list {
+      margin: 50px 0 ;
+      justify-content: center;
+    }
+
+    .card-wrapper {
+      margin: 5px 10px 5px 10px;
+    }
+  }
